libs/wingc/src/jsify/captures/snapshots/wingc__jsify__captures__tests__enum_value.snap
---
source: libs/wingc/src/jsify/captures/tests.rs
expression: "capture_ok(r#\"\n    enum MyEnum { B, C }\n    let x = MyEnum.C;\n    test \"test\" {\n      assert(MyEnum.B != MyEnum.C);\n      assert(x == MyEnum.C);\n    }\n    \"#)"
---
======================================================
Files:

inflight.$Closure1.js
------------------------------------------------------
module.exports = function({ $MyEnum, $x, MyEnum }) {
  class $Closure1 {
    async handle()  {
      {((cond) => {if (!cond) throw new Error("assertion failed: MyEnum.B != MyEnum.C")})(($MyEnum.B !== $MyEnum.C))};
      {((cond) => {if (!cond) throw new Error("assertion failed: x == MyEnum.C")})(($x === $MyEnum.C))};
    }
    constructor({  }) {
      const $obj = (...args) => this.handle(...args);
      Object.setPrototypeOf($obj, this);
      return $obj;
    }
  }
  return $Closure1;
}

preflight.js
------------------------------------------------------
class $Closure1 extends $stdlib.std.Resource {
  constructor(scope, id, ) {
    super(scope, id);
    this._addInflightOps("handle");
    this.display.hidden = true;
  }
  static _toInflightType(context) {
    return $stdlib.core.NodeJsCode.fromInline(`
      require("./inflight.$Closure1.js")({ 
        $MyEnum: ${context._lift(MyEnum)},
        $x: ${context._lift(x)},
      })
    `);
  }
  _toInflight() {
    return $stdlib.core.NodeJsCode.fromInline(`
      (await (async () => {
        const client = new (${$Closure1._toInflightType(this).text})({
        });
        if (client.$inflight_init) { await client.$inflight_init(); }
        return client;
      })())
    `);
  }
  _registerBind(host, ops) {
    if (ops.includes("handle")) {
      $Closure1._registerBindObject(MyEnum, host, ["B", "C"]);
      $Closure1._registerBindObject(x, host, []);
    }
    super._registerBind(host, ops);
  }
}
const MyEnum = 
  Object.freeze((function (tmp) {
    tmp[tmp["B"] = 0] = "B";
    tmp[tmp["C"] = 1] = "C";
    return tmp;
  })({}))
;
const x = MyEnum.C;
this.node.root.new("@winglang/sdk.std.Test",std.Test,this,"test:test",new $Closure1(this,"$Closure1"));

