libs/wingc/src/jsify/captures/snapshots/wingc__jsify__captures__tests__fails_on_mutable_collections.snap
---
source: libs/wingc/src/jsify/captures/tests.rs
expression: "capture_fail(r#\"\n    let x = MutArray<str>[\"hello\", \"world\"];\n\n    test \"test\" {\n      assert(x.at(0) == \"hello\");\n    }\n    \"#)"
---
======================================================
Captured by $Closure1:

======================================================
Errors:
 - at 4:13 | Cannot capture field 'x' with non-capturable type 'MutArray<str>'
======================================================
Files:

inflight.$Closure1.js
------------------------------------------------------
module.exports = function({  }) {
  class $Closure1 {
    constructor({  }) {
      const $obj = (...args) => this.handle(...args);
      Object.setPrototypeOf($obj, this);
      return $obj;
    }
    async handle()  {
      {((cond) => {if (!cond) throw new Error(`assertion failed: '((await x.at(0)) === "hello")'`)})(((await x.at(0)) === "hello"))};
    }
    async $inflight_init()  {
    }
  }
  return $Closure1;
}

main.w
------------------------------------------------------

    let x = MutArray<str>["hello", "world"];

    test "test" {
      assert(x.at(0) == "hello");
    }
    
preflight.js
------------------------------------------------------
class $Closure1 extends $stdlib.std.Resource {
  constructor(scope, id, ) {
    super(scope, id);
    this._addInflightOps("handle", "$inflight_init");
    this.display.hidden = true;
  }
  static _toInflightType(context) {
    return $stdlib.core.NodeJsCode.fromInline(`
      require("./inflight.$Closure1.js")({})
    `);
  }
  _toInflight() {
    return $stdlib.core.NodeJsCode.fromInline(`
      (await (async () => {
        const client = new (${$Closure1._toInflightType(this).text})({ });
        if (client.$inflight_init) { await client.$inflight_init(); }
        return client;
      })())
    `);
  }
}
const x = ["hello", "world"];
this.node.root.new("@winglang/sdk.std.Test",std.Test,this,"test:test",new $Closure1(this,"$Closure1"));

